<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_accent_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/stilu_bold"
        android:padding="12dp"
        android:text="@string/app_name_full"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/log_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_card_bg"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            tools:ignore="UselessLeaf" />

        <RelativeLayout
            android:id="@+id/log_logo"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/log_logo_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/stilu_bold"
                android:text="@string/logo_text_a"
                android:textColor="@color/card7"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/log_logo_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/log_logo_a"
                android:layout_alignEnd="@id/log_logo_a"
                android:fontFamily="@font/stilu_bold"
                android:text="@string/logo_text_b"
                android:textColor="@color/card7"
                android:textSize="18sp" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            tools:ignore="UselessLeaf" />

        <TextView
            android:id="@+id/log_tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/stilu_bold"
            android:text="@string/tag_line_text"
            android:textColor="@color/orange"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:ignore="UselessLeaf" />

            <androidx.cardview.widget.CardView
                android:id="@+id/log_scroll_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                app:cardBackgroundColor="@color/card1"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/stilu_bold"
                        android:text="@string/login_heading_text"
                        android:textColor="@color/blue"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/log_email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:errorIconDrawable="@null"
                        app:endIconMode="clear_text"
                        app:endIconDrawable="@drawable/ic_cancel"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/log_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:backgroundTint="@color/card2"
                            android:hint="@string/email_hint_text"
                            android:inputType="textEmailAddress"
                            android:textCursorDrawable="@drawable/cursor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/log_password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:passwordToggleEnabled="true"
                        app:errorIconDrawable="@null"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/orange">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/log_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="password"
                            android:backgroundTint="@color/card2"
                            android:hint="@string/password_hint_text"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@drawable/cursor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/log_having_trouble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/having_trouble_text"
                        android:textColor="@color/link_text_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/log_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/login_button_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/stilu_bold"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        android:paddingHorizontal="24dp"
                        android:paddingVertical="8dp"
                        android:text="@string/login_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="14sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/log_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/register_text"
                        android:textColor="@color/link_text_color" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            tools:ignore="UselessLeaf" />

            <androidx.cardview.widget.CardView
                android:id="@+id/log_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                app:cardBackgroundColor="@color/card1"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/log_footer_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/website_link_text"
                        android:textColor="@color/link_text_color" />

                    <TextView
                        android:id="@+id/log_footer_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/contact_link_text"
                        android:textColor="@color/link_text_color" />

                    <TextView
                        android:id="@+id/log_footer_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/about_link_text"
                        android:textColor="@color/link_text_color" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            tools:ignore="UselessLeaf" />

    </LinearLayout>

</LinearLayout>