<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card4"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/stilu_semi_bold"
        android:text="About"
        android:textColor="@color/card8"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/card2"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/contact_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/stilu_semi_bold"
                android:text="@string/about_text_a"
                android:textColor="@color/orange"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/contact_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_company_name"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/stilu_regular"
                android:justificationMode="inter_word"
                android:text="@string/about_text_b"
                android:textColor="@color/card7"
                android:textSize="12sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/contact_address_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_address"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/stilu_semi_bold_oblique"
                android:gravity="center"
                android:text="@string/about_text_c"
                android:textColor="@color/card7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_address_map_button"
                android:fontFamily="@font/stilu_semi_bold"
                android:text="Our Mission"
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_subheading"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/stilu_regular"
                android:text="@string/about_text_d"
                android:textColor="@color/card7"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>