<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/otp_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card3"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/reset_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_cancel"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        app:errorIconDrawable="@null"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_cancel"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/card2"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/reset_find_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_button_bg"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/stilu_bold"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/reset_find_me_text"
        android:textColor="@color/button_text_color"
        android:textSize="14sp"
        tools:ignore="UnusedAttribute" />

    <RelativeLayout
        android:id="@+id/reset_account_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/reset_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="@color/card2"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    app:cardBackgroundColor="@color/card8"
                    app:cardCornerRadius="42dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/card8"
                        app:cardCornerRadius="40dp">

                        <ImageView
                            android:id="@+id/reset_avatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_avatar"
                            tools:ignore="ContentDescription" />

                    <FrameLayout
                        android:id="@+id/reset_avatar_dimmer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C0000000"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/reset_avatar_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/reset_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/card9"
                        android:textSize="16sp"
                        tools:text="+91817XXXXX15" />

                    <TextView
                        android:id="@+id/reset_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/card9"
                        android:textSize="16sp"
                        tools:text="Surat Prakash Maurya" />

                    <TextView
                        android:id="@+id/reset_study"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/card9"
                        android:textSize="12sp"
                        tools:text="B.Tech (CSE) - Sanskriti University" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_card"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reset_not_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/login_button_bg"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/stilu_bold"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/reset_not_me_text"
                android:textColor="@color/button_text_color"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/reset_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:background="@drawable/login_button_bg"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/stilu_bold"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/reset_next_text"
                android:textColor="@color/button_text_color"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reset_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            app:errorIconDrawable="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/card2"
                android:hint="@string/new_password_hint_text"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            app:errorIconDrawable="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/card2"
                android:hint="@string/confirm_new_password_hint_text"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reset_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/stilu_bold"
            android:foreground="?android:selectableItemBackgroundBorderless"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/submit_button_text"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>